# AmapContractGeneration

./: .gitignore  README.md  pyproject.toml
src/: errors.py  generate_contract_template.py
tests/: test_generate_template.py
tests/files/: test_template.odt
tests/output/: test_custom_shipments.odt  test_generate_basic_shipments.odt  test_generate_basic_shipments_with_oneshot.odt  test_generate_custom_shipments_with_oneshot.odt
